[tool.poetry]
name = "data-cleaner"
version = "0.1.0"
description = "File Cleaner and Converter"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "data_cleaner" }]
# Add this to prevent packaging errors
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "*"
streamlit = "*"
openpyxl = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


